--- a/Desktop.html
+++ b/Desktop.html
@@ -197,15 +197,11 @@ Experiences:
             </div>
             <div class="chat-main" id="chat-main">
                 <div class="chat-header">
-                    <img id="chat-header-pfp" class="chat-pfp" src="https://img.icons8.com/color/96/000000/user-male-circle--v1.png" alt="PFP">
-                    <span id="chat-header-name" class="chat-user-name-display">Select a chat to begin</span>
+                    <img id="chat-header-pfp" class="chat-pfp">
+                    <span id="chat-header-name" class="chat-user-name-display"></span>
                 </div>
                 <div class="chat-window" id="chat-window">
-                    <div style="text-align: center; color: #888; margin-top: 50px; opacity: 0.7;">
-                        <img src="https://img.icons8.com/color/96/000000/whatsapp--v1.png" alt="WhatsApp" style="width: 80px; opacity: 0.6; margin-bottom: 10px;">
-                        <p>Welcome to your chat window.</p>
-                        <p>Click a user on the left to view their conversation.</p>
-                    </div>
+                    <div style="text-align: center; color: #888; margin-top: 50px; opacity: 0.7;"></div>
                 </div>
                 <div class="chat-input-area">
                     <input type="text" id="message-input" placeholder="Type a message...">
