--- a/Desktop.html
+++ b/Desktop.html
@@ -27,7 +27,7 @@
             <span>Contact</span>
         </div>
         <div class="icon" id="recycle-icon">
-            <img id="recycle-img" src="https://img.icons8.com/color/96/000000/recycle-bin.png" alt="Recycle Bin">
+            <img id="recycle-img" src="https://img.icons8.com/?size=100&id=LjNe156kndXS&format=png&color=000000" alt="Recycle Bin">
             <span>Recycle Bin</span>
         </div>
     </div>
@@ -170,17 +170,17 @@ Experiences:
                 <button id="recycle-minimize">–</button>
                 <button id="recycle-maximize">□</button>
                 <button id="recycle-close">×</button>
-            </div>
+            </div>  
         </div>
-        <div style="flex:1; background:#181818; color:#fff; overflow:auto; padding:20px;">
+        <div style="flex:1; background:#181818; color:#fff; overflow:auto; padding:20px; height:90%; width:97%;">
             <div style="display:flex; justify-content:space-between; margin-bottom:20px;">
                 <h3>Items in Recycle Bin (<span id="trash-count">0</span>)</h3>
-                <button id="empty-bin" style="background:#d32f2f; color:white; border:none; padding:8px 16px; border-radius:4px; cursor:pointer;">Empty Recycle Bin</button>
+                <button id="empty-bin" style="background:#d32f2f; color:white; border:none; padding:0px 5px; height: 40px; border-radius:4px; cursor:pointer;">Empty Recycle Bin</button>
             </div>
             <div id="trash-items" style="display:grid; grid-template-columns:repeat(auto-fill,minmax(120px,1fr)); gap:16px;"></div>
             <div id="empty-trash-msg" style="text-align:center; padding:80px 20px; color:#aaa; display:none;">
-                <img src="https://img.icons8.com/color/96/000000/recycle-bin.png" style="opacity:0.3;">
-                <p>This Recycle Bin is empty.<br>Drag icons here to delete them 😈</p>
+                <img src="https://img.icons8.com/?size=100&id=8usOzL0PIrcw&format=png&color=000000" style="opacity:0.3;">
+                <p>This Recycle Bin is empty.</p>
             </div>
         </div>
     </div>    
