--- a/Desktop.html
+++ b/Desktop.html
@@ -229,6 +229,7 @@ Experiences:
     <script src="SCRIPT_FOLDER/whatsapp.js"></script>
     <script src="SCRIPT_FOLDER/easter-egg.js"></script>
     <script src="SCRIPT_FOLDER/effects.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
 </body>
 </html>
