--- a/Desktop.html
+++ b/Desktop.html
@@ -205,6 +205,10 @@ Experiences:
                 </div>
                 <div class="chat-input-area">
                     <input type="text" id="message-input" placeholder="Type a message...">
+                    <label for="fileAttachment">
+                        <img src="https://img.icons8.com/ios-filled/24/000000/attach.png" alt="Attach" style="cursor:pointer; margin-right:10px;">
+                    </label>
+                    <input type="file" id="fileAttachment" name="fileAttachment" style="display:none;">
                     <button class="send-btn" id="send-message-btn" title="Send">→</button>
                 </div>
             </div>
