--- a/public/Desktop.html
+++ b/public/Desktop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS_FOLDER/Desktop.css">
+    <link rel="stylesheet" href="CSS_FOLDER/analytics.css">
     <title>Desktop</title>
 </head>
 <body>
@@ -229,6 +230,12 @@ Experiences:
         </div>
     </div>
 
+    <div id="visitor-widget">
+        <div id="live-users">– online</div>
+        <div id="total-users">– total visits</div>
+    </div>
+
+    <script src="script_folder/analytics.js"></script>
     <script src="SCRIPT_FOLDER/script.js"></script>
     <script src="SCRIPT_FOLDER/whatsapp.js"></script>
     <script src="SCRIPT_FOLDER/easter-egg.js"></script>
