--- a/public/Desktop.html
+++ b/public/Desktop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS_FOLDER/Desktop.css">
-    <link rel="stylesheet" href="CSS_FOLDER/analytics.css">
+    
     <title>Desktop</title>
 </head>
 <body>
@@ -235,11 +235,10 @@ Experiences:
         <div id="total-users">– total visits</div>
     </div>
 
-    <script src="script_folder/analytics.js"></script>
     <script src="SCRIPT_FOLDER/script.js"></script>
     <script src="SCRIPT_FOLDER/whatsapp.js"></script>
     <script src="SCRIPT_FOLDER/easter-egg.js"></script>
-    <script src="SCRIPT_FOLDER/effects.js"></script>
+    <script src="api/github.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
 </body>
