--- a/public/Desktop.html
+++ b/public/Desktop.html
@@ -245,7 +245,7 @@ Experiences:
             </div>
         </div>
         <div class="app-content" id="github-content">
-            <div id="github-repos-grid" class="repos-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap: 20px; padding: 20px; overflow-y: auto; height: 100%;">
+            <div id="github-repos-grid" class="repos-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap: 5.5%; padding: 1%; overflow-y: auto; height: 100%;">  
             </div>
         </div>
     </div>
